force-app/main/default/objects/Job_Application__c/fields/Average_rating__c.field-meta.xml
<CustomField>
    <fullName>Average_rating__c</fullName>
    <label>Average rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>