force-app/main/default/objects/Job_Application__c/fields/Number_of_reviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_reviews__c</fullName>
    <label>Number of reviews</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>