force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Position</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Position__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>