force-app/main/default/objects/Job_Application__c/listViews/Job_Application_Channel.listView-meta.xml
<ListView>
    <fullName>Job_Application_Channel</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Job Application Channel</label>
</ListView>